# stellaris_archipelago

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  dashboard.py  setup.py
apworld/stellaris/: __init__.py  archipelago.json  items.py  locations.py  options.py  regions.py  rules.py
apworld/stellaris/data/: __init__.py  tech_catalog.py
apworld/stellaris/docs/: en_Stellaris.md  setup_guide.md
apworld/stellaris/test/: __init__.py  test_access.py  test_data.py  test_generation.py  test_options.py
client/: ap_bridge.py  mock_ap_server.py  pipe_client.py  slot_generator.py  tech_catalog.py  tech_scanner.py
dll/: ARCHITECTURE.md  CMakeLists.txt  HOOKING_RESEARCH.md  version.def
dll/src/: bridge.cpp  bridge.h  console.cpp  console.h  dllmain.cpp  logging.cpp  logging.h  proxy.cpp  proxy.h
mod-install/: archipelago_multiworld.mod
mod-install/archipelago_multiworld/: descriptor.mod
mod-install/archipelago_multiworld/common/edicts/: ap_energy_link_edicts.txt
mod-install/archipelago_multiworld/common/on_actions/: ap_on_actions.txt
mod-install/archipelago_multiworld/common/opinion_modifiers/: ap_opinion_modifiers.txt
mod-install/archipelago_multiworld/common/scripted_effects/: ap_bridge_log.txt  ap_check_detection.txt  ap_item_effects.txt
mod-install/archipelago_multiworld/common/scripted_triggers/: ap_triggers.txt
mod-install/archipelago_multiworld/common/static_modifiers/: ap_modifiers.txt
mod-install/archipelago_multiworld/events/: ap_bridge_events.txt  ap_check_events.txt  ap_hook_events.txt
(+3 files in other folders)
